<resources>
    <string name="app_name">TimeManager</string>
    <string name="body">Тело</string>
    <string name="business">Дело</string>
    <string name="spirit">Душа</string>
    <string name="relationships">Отношения</string>
    <string name="task_description">Task description:</string>
    <string name="task_date">Task date:</string>
    <string name="ok">OK</string>
    <string name="back">Back</string>
    <string name="category">Категория</string>
    <string name="yes">Да</string>
    <string name="cancel">Отмена</string>
    <string name="want_you_save_changes">Сохранить изменения?</string>
    <string name="changes_saved">Изменения сохранены</string>
    <string name="empty_body_message">Заполните тело задачи</string>
    <string name="changes_not_saved">Изменения не сохранены</string>
    <string name="empty" />
    <string name="title_delete_task_dialog">Удалить задание?</string>
    <string name="title_delete_subcategory_dialog">Удалить подкатегорию?</string>
    <string name="add_subcategory">Добавить подкатегорию</string>
    <string name="title_add_subcategory_dialog">Введите имя подкатегории</string>
    <string name="full_diagram">Полная диаграмма</string>
    <string name="tasks">Задачи</string>
    <string name="categories">Категории</string>
    <string name="body_first_subcategory">Здоровье</string>
    <string name="business_first_subcategory">Работа</string>
    <string name="spirit_first_subcategory">Хобби</string>
    <string name="relationships_first_subcategory">Семья</string>
    <string name="task_first_name">Установить Well Balanced Life</string>
    <string name="first_diagram_description">Баланс дел по общему количеству</string>
    <string name="second_diagram_description">Средние значения эффективности</string>
    <string name="third_diagram_description">Баланс дел по общей эффективности</string>
</resources>
