<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:background="?attr/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <android.support.v7.widget.AppCompatButton
                android:id="@+id/back_image_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingStart="@dimen/image_button_horizontal_padding"
                android:paddingEnd="@dimen/image_button_horizontal_padding"
                android:drawableEnd="@drawable/ic_arrow_back_white_24dp"
                android:src="@drawable/ic_arrow_back_white_24dp"
                android:contentDescription="@string/back" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="10">

            </LinearLayout>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/ok_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/horizontal_padding"
                android:layout_weight="1"
                android:textColor="@color/white500"
                android:text="@string/ok" />
        </LinearLayout>


    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_body_black_64dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/body"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_business_black_64dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/business"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_spirit_black_64dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/spirit"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_relationships_black_64dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/relationships"/>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:text="@string/task_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/vertical_padding"
        android:paddingStart="@dimen/horizontal_padding"
        android:paddingEnd="@dimen/horizontal_padding"/>

    <EditText
        android:id="@+id/task_body_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="Task body"
        android:paddingStart="@dimen/horizontal_padding"
        android:paddingEnd="@dimen/horizontal_padding"
        android:inputType="textShortMessage"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        tools:ignore="LabelFor" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/task_date"
        android:paddingTop="@dimen/vertical_padding"
        android:paddingStart="@dimen/horizontal_padding"
        android:paddingEnd="@dimen/horizontal_padding"/>

    <TextView
        android:id="@+id/task_date_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/vertical_padding"
        android:paddingStart="@dimen/horizontal_padding"
        android:paddingEnd="@dimen/horizontal_padding"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        tools:text="28.03.2018"/>


</LinearLayout>
